# image-viewer

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.superpowers/sdd/: fix-report.md
docs/superpowers/plans/: 2026-06-26-image-viewer-phase1.md  2026-06-26-image-viewer-phase2.md  2026-06-27-image-viewer-exif-viewer.md  2026-06-27-image-viewer-phase3.md  2026-06-27-image-viewer-visual-polish.md  2026-06-27-resizable-list-columns.md  2026-06-27-thumbnail-cache-and-sizing.md
docs/superpowers/specs/: 2026-06-26-image-viewer-design.md  2026-06-26-image-viewer-phase2-design.md  2026-06-27-image-viewer-exif-viewer-design.md  2026-06-27-image-viewer-phase3-design.md  2026-06-27-image-viewer-visual-polish-design.md  2026-06-27-resizable-list-columns-design.md  2026-06-27-thumbnail-cache-and-sizing-design.md
src/: app.rs  config.rs  disk_cache.rs  exif.rs  font_loader.rs  image_loader.rs  main.rs  theme.rs  thumbnail_cache.rs  viewer.rs
src/batch/: mod.rs  operations.rs
src/browser/: files.rs  grid.rs  mod.rs  tree.rs
src/editor/: mod.rs  operations.rs
