[package]
name = "image-viewer"
version = "0.1.5"
edition = "2021"

[dependencies]
eframe = "0.31"
egui = "0.31"
exif = { version = "0.6", package = "kamadak-exif" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif", "tiff", "webp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"
lru = "0.12"
open = "5"
